Better extension and data collection

--- a/extension/package.json
+++ b/extension/package.json
@@ -6,8 +6,8 @@
   "license": "GPL-3.0",
   "scripts": {
     "build": "npm run clean && npm run copy-files && npm run validate",
-    "clean": "rm -rf dist && mkdir -p dist",
-    "copy-files": "cp -r manifest.json popup/ content/ background/ icons/ dist/",
+    "clean": "rm -rf dist && mkdir -p dist/popup dist/content dist/background dist/icons",
+    "copy-files": "cp manifest.json dist/ && cp popup/* dist/popup/ && cp content/* dist/content/ && cp background/* dist/background/ && cp icons/*.png dist/icons/",
     "validate": "node scripts/validate-manifest.js",
     "pack": "cd dist && zip -r ../extension.zip .",
     "dev": "npm run build && npm run pack"
