--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -8,7 +8,8 @@
   "permissions": [
     "activeTab",
     "storage",
-    "scripting"
+    "scripting",
+    "notifications"
   ],
   
   "host_permissions": [
