--- a/.github/workflows/build-extension.yml
+++ b/.github/workflows/build-extension.yml
@@ -66,50 +66,29 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         tag_name: ${{ steps.get_version.outputs.VERSION }}
-        name: Slither.io ESN Data Collector ${{ steps.get_version.outputs.VERSION }}
+        name: "Slither.io ESN Data Collector ${{ steps.get_version.outputs.VERSION }}"
         body: |
           ## Slither.io ESN Data Collector Extension
           
-          ### Installation Instructions:
+          ### Installation Instructions
           1. Download the `slither-esn-extension.zip` file
           2. Extract the ZIP file
           3. Open Chrome/Edge and go to `chrome://extensions/`
           4. Enable "Developer mode"
           5. Click "Load unpacked" and select the extracted folder
           
-          ### Features:
-          - 🎯 Real-time data collection from Slither.io
-          - ⚙️ Easy configuration via extension popup
-          - 📊 Live statistics and connection status
-          - 🔄 Automatic data transmission to your backend server
+          ### Features
+          - Real-time data collection from Slither.io
+          - Easy configuration via extension popup
+          - Live statistics and connection status
+          - Automatic data transmission to your backend server
           
-          ### Usage:
+          ### Usage
           1. Configure your username and server host in the extension popup
           2. Go to slither.io and start playing
           3. Data collection will begin automatically
           
-          For detailed setup instructions, see the [README](https://github.com/NickP005/slitherio-scraper/blob/main/README.md).
-        files: |
-          slither-esn-extension-*.zip
+          For detailed setup instructions, see the README.
+        files: slither-esn-extension-*.zip
         draft: false
         prerelease: false
-          - 🎯 Real-time data collection from Slither.io
-          - ⚙️ Easy configuration via extension popup
-          - 📊 Live statistics and connection status
-          - 🔄 Automatic data transmission to your backend server
-          
-          ### Usage:
-          1. Configure your username and server host in the extension popup
-          2. Go to slither.io and start playing
-          3. Data collection will begin automatically
-          
-          For detailed setup instructions, see the [README](https://github.com/NickP005/slitherio-scraper/blob/main/README.md).
-        draft: false
-        prerelease: false
-        
-    - name: Update Chrome Web Store (Optional)
-      if: false  # Set to true when you have Chrome Web Store credentials
-      run: |
-        # This would publish to Chrome Web Store automatically
-        # Requires setting up Chrome Web Store API credentials
-        echo "Chrome Web Store publication disabled"
