--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 fastapi>=0.104.1
 uvicorn>=0.24.0
 numpy>=1.26.0
-zarr>=2.16.1
+zarr>=2.18.0
+numcodecs>=0.12.0,<0.14.0
 python-multipart>=0.0.6
 pydantic>=2.5.0
